[gd_scene load_steps=7 format=3 uid="uid://to85611algdp"]

[ext_resource type="Material" uid="uid://cx8ylybs2rnkg" path="res://Themes/hueShift.tres" id="1_8774k"]
[ext_resource type="Script" path="res://dead_effect.gd" id="1_l5rbg"]
[ext_resource type="Texture2D" uid="uid://ck64g1sjqi7f7" path="res://Assets/Graphics/sprites/star.png" id="2_waovt"]

[sub_resource type="Animation" id="Animation_bux54"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:scale:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.25, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:scale:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.25, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-32, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-8, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("..:material:shader_parameter/Shift_Hue")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_kvyt3"]
resource_name = "loop"
length = 2.0
loop_mode = 1
step = 0.01
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(1, 1, 1, 1, 1),
"points": PackedFloat32Array(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(1, 1, 1, 1, 1),
"points": PackedFloat32Array(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(1, 1, 1, 1, 1),
"points": PackedFloat32Array(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(1, 1, 1, 1, 1),
"points": PackedFloat32Array(0, 0, 0, 0, 0, 0.392157, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0.568627, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:scale:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(1, 1, 1, 1, 1),
"points": PackedFloat32Array(0.25, 0, 0, 0, 0, 0.5, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0.5, 0, 0, 0, 0, 0.25, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:scale:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(1, 1, 1, 1, 1),
"points": PackedFloat32Array(0.25, 0, 0, 0, 0, 0.5, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0.5, 0, 0, 0, 0, 0.25, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.2, -15.5, -32, -0.2, 0.5, 0.2, 0.5, 0, -0.196419, -16.5, 0.213581, 15.5, 40, -0.205825, 0.5, 0.214175, -0.5, 0, -0.2, 13.5, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, 0, 0, 0.19, -7.5, -8, -0.17, -0.5, 0.193714, 4.5, 8, -0.171095, -7.5, 0.211702, 6.5, 16, -0.188298, 0.5, 0.174175, -9.5, 0, -0.181317, 2.5, 0, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("..:material:shader_parameter/Shift_Hue")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s4tu2"]
_data = {
"RESET": SubResource("Animation_bux54"),
"loop": SubResource("Animation_kvyt3")
}

[node name="Node2D" type="Sprite2D"]
z_index = 15
material = ExtResource("1_8774k")
script = ExtResource("1_l5rbg")

[node name="hit_effect" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
use_parent_material = true
position = Vector2(-32, -8)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_waovt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="hit_effect"]
autoplay = "loop"
libraries = {
"": SubResource("AnimationLibrary_s4tu2")
}

[node name="hit_effect2" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
use_parent_material = true
position = Vector2(-32, -8)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_waovt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="hit_effect2"]
libraries = {
"": SubResource("AnimationLibrary_s4tu2")
}

[node name="hit_effect3" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
use_parent_material = true
position = Vector2(-32, -8)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_waovt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="hit_effect3"]
libraries = {
"": SubResource("AnimationLibrary_s4tu2")
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="animDelay" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
autostart = true

[node name="animDelay2" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="hit_effect" method="_on_timer_timeout"]
[connection signal="timeout" from="animDelay" to="." method="_on_anim_delay_timeout"]
[connection signal="timeout" from="animDelay2" to="." method="_on_anim_delay_2_timeout"]
